# awesome-list-infra

./: .gitignore  LICENSE  README.md  pyproject.toml  repositories.yaml
.github/workflows/: audit-direct-resource-pr.yml  check-links.yml  protect-readme.yml  refresh-metadata.yml  stale-author-action-issues.yml  validate-data.yml
docs/: migration-plan.md
src/awesome_list_infra/: __init__.py  audit_direct_resource_pr.py  fix_links.py  readme.py
templates/: CONTRIBUTING.md
templates/github/: PULL_REQUEST_TEMPLATE.md
templates/workflows/: audit-direct-resource-pr.yml  refresh-metadata.yml  validate-and-generate.yml
tests/: test_audit_direct_resource_pr.py
