[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "awesome-list-infra"
version = "0.1.0"
description = "Shared maintenance utilities for jslee02 awesome-list repositories"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Jeongseok Lee" }
]
dependencies = [
  "PyYAML>=6"
]

[project.scripts]
awesome-list-fix-links = "awesome_list_infra.fix_links:main"
awesome-list-generate = "awesome_list_infra.readme:generate_main"
awesome-list-validate = "awesome_list_infra.readme:validate_main"
awesome-list-import-readme = "awesome_list_infra.readme:import_main"
awesome-list-fetch-metadata = "awesome_list_infra.readme:fetch_metadata_main"

[tool.setuptools.packages.find]
where = ["src"]
